--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -1,10 +1,10 @@
-// * {
-//     border: 1px solid black;
-// }
+* {
+    border: 1px solid black;
+}
 
 .App {
     margin: 2rem auto;
-    width: 80%;
+    width: 90%;
     min-width: 400px;
 }
 
@@ -15,7 +15,9 @@
     box-shadow: 0.5rem 1rem 1rem rgba(0, 0, 0, 0.192);
     position: relative;
     overflow: hidden;
-
+    min-width: 25rem;
+    max-width: 50rem;
+    
     img {
         border-radius: 0.5rem;
     }
@@ -54,6 +56,11 @@ header {
 .container-main {
     width: 100%;
     @include flex(row, space-evenly, center);
+    flex-wrap: wrap;
+
+    & > div {
+        width: 50%;
+    }
 
     h2 {
         margin: 1rem 2rem;
