--- a/app/src/styles/general.scss
+++ b/app/src/styles/general.scss
@@ -1,11 +1,14 @@
+h1, h2, h3, h4, h5, h6 {
+    color: white;
+    font-family: $font-header;
+}
+
 h1 {
     font-size: 3.5rem;
-    font-family: $font-header;
 }
 
 h2, h3, h4, h5, h6 {
     font-size: 2.8rem;
-    font-family: $font-header;
 }
 
 p {
